[package]
name = "rustdi"
version = "0.1.0"
authors = ["Nathan <joo-devweb>"]
edition = "2024"
description = "Modern WhatsApp Client Library for Rust"
documentation = "https://docs.rs/rustdi"
homepage = "https://github.com/joo-devweb/rustdi"
repository = "https://github.com/joo-devweb/rustdi"
readme = "README.md"
keywords = ["whatsapp", "client", "api", "protocol", "messaging"]
categories = ["whatsapp-web-api-rust", "rust", "web-whatsappapi"]
license = "MIT"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16

[dependencies]
ws = {version = "0.9.2", features = ["ssl"]}
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.10"
url = "2.0"
json = "0.12.4"
ring = "0.17"
base64 = "0.21"
qrcode = { version = "0.12", default-features = false }
untrusted = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
byteorder = "1.4.3"
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.0"
uuid = { version = "1.0", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"

[features]
default = []

[lib]
name = "rustdi"
path = "src/lib.rs"

[build-dependencies]
protobuf-codegen = "3.0"